--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -1,16 +1,60 @@
-SUN COMMUNITY
-Apa itu sun-community.com?
-Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun.community.com akan disebut sebagai partisipan. Setiap partisipan akan memiliki 2 buah hak, yaitu :
-1.	PH (Provide Help) yaitu memberikan bantuan kepada partisipan lain
-2.	GH (Get Help) yaitu meminta bantuan kepada partisipan lain
-Bagaimana cara kerja sun-community.com?
-Berikut adalah tahap-tahap cara kerja di sun-community.com :
-1.	Anda harus mencari upline atau orang yang menawarkan sun-community kepada Anda
-2.	Anda silahkan membeli tiket pendaftaran kepada upline Anda senilai Rp. 100.000,-
-3.	Anda silahkan memberikan data-data yang dibutuhkan kepada upline Anda
-4.	Setelah id Anda siap didaftarkan, maka id Anda ter-PH secara otomatis
-5.	Penjodohan PH-GH akan dilakukan secara random 1-5 hari.
-6.	Setelah Anda mendapatkan pasangan transfer, silahkan lakukan proses transfer tersebut (Anda akan diberikan waktu 48 jam untuk melakukan proses transfer tersebut)
+<section id="pagetitle-container">
+    	<div class="row">
+        	<div class="twelve column">
+            	<h1>About Us</h1>
+            </div>
+        </div>	        
+    </section>
+    <!-- pagetitle end here -->
+      
+    <!-- content section start here -->
+    <section class="content-wrapper">
+    	<div class="row">
+        	<div class="six column">
+            	<h3>Apa itu sun-community.com?</h3>
+                <p>Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun.community.com akan disebut sebagai partisipan.</p>
+            	<p> Setiap partisipan akan memiliki 2 buah hak, yaitu :</p>
+            	<div class="four column mobile-five">
+                <p><strong>ul.square</strong></p>
+                <pre>class &quot;square&quot;</pre>
+                <ul class="square">
+                  <li>PH (Provide Help) yaitu memberikan bantuan kepada partisipan lain</li>                    
+                  <li>GH (Get Help) yaitu meminta bantuan kepada partisipan lain</li>
+                </ul> 	
+            </div>
+            
+            <h3>Bagaimana cara kerja sun-community.com?</h3>
+            <h4>Berikut adalah tahap-tahap cara kerja di sun-community.com :</h4>
+            <div class="four column mobile-five">
+                <p><strong>ul.square</strong></p>
+                <pre>class &quot;square&quot;</pre>
+                <ul class="square">
+                  <li>Anda harus mencari upline atau orang yang menawarkan sun-community kepada Anda</li>         
+                  <li>Anda silahkan membeli tiket pendaftaran kepada upline Anda senilai Rp. 100.000,-</li>
+                  <li>Anda silahkan memberikan data-data yang dibutuhkan kepada upline Anda-</li>
+                  <li>Setelah id Anda siap didaftarkan, maka id Anda ter-PH secara otomatis
+                  <li>Penjodohan PH-GH akan dilakukan secara random 1-5 hari</li>
+                  <li>Setelah Anda mendapatkan pasangan transfer, silahkan lakukan proses transfer tersebut (Anda akan diberikan</li>
+                </ul> 	
+            </div>
+            
+            </div>
+        </div>
+      </div>             
+  </section>
+    <!-- content section end here -->
+
+
+
+
+
+
+
+1.	
+2.	
+3.	
+4.	
+ waktu 48 jam untuk melakukan proses transfer tersebut)
 7.	Setelah Anda transfer dan dikonfirmasi, maka Anda harus menunggu selama 1 x 24 jam agar dapat melakukan GH.
 8.	Untuk melakukan GH, Anda harus membeli 1 tiket ke upline Anda. Tiket akan digunakan untuk rePH, dengan begitu sistem sun-community.com akan long live.
 9.	Penjodohan akan dilakukan setiap pukul 22.00 WIB
