--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -10,11 +10,11 @@
     <!-- content section start here -->
     <section class="content-wrapper">
     	<div class="row">
-        	<div class="six column">
+        	<div class="twelve column">
             	<h3>Apa itu sun-community.com?</h3>
                 <p>Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun.community.com akan disebut sebagai partisipan.</p>
             	<p> Setiap partisipan akan memiliki 2 buah hak, yaitu :</p>
-            	<div class="four column mobile-five">
+            	<div class="eleven column mobile-five">
                 <p><strong>ul.square</strong></p>
                 <pre>class &quot;square&quot;</pre>
                 <ul class="square">
@@ -25,7 +25,7 @@
             
             <h3>Bagaimana cara kerja sun-community.com?</h3>
             <h4>Berikut adalah tahap-tahap cara kerja di sun-community.com :</h4>
-            <div class="four column mobile-five">
+            <div class="eleven column mobile-five">
                 <p><strong>ul.square</strong></p>
                 <pre>class &quot;square&quot;</pre>
                 <ul class="square">
