--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -13,10 +13,8 @@
         	<div class="twelve column">
             	<h3>Apa itu sun-community.com?</h3>
                 <p>Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun.community.com akan disebut sebagai partisipan.</p>
-            	<p> Setiap partisipan akan memiliki 2 buah hak, yaitu :</p>
+            	<h5> Setiap partisipan akan memiliki 2 buah hak, yaitu :</h5>
             	<div class="eleven column mobile-five">
-                <p><strong>ul.square</strong></p>
-                <pre>class &quot;square&quot;</pre>
                 <ul class="square">
                   <li>PH (Provide Help) yaitu memberikan bantuan kepada partisipan lain</li>                    
                   <li>GH (Get Help) yaitu meminta bantuan kepada partisipan lain</li>
@@ -24,10 +22,8 @@
             </div>
             
             <h3>Bagaimana cara kerja sun-community.com?</h3>
-            <h4>Berikut adalah tahap-tahap cara kerja di sun-community.com :</h4>
+            <h5>Berikut adalah tahap-tahap cara kerja di sun-community.com :</h5>
             <div class="eleven column mobile-five">
-                <p><strong>ul.square</strong></p>
-                <pre>class &quot;square&quot;</pre>
                 <ul class="square">
                   <li>Anda harus mencari upline atau orang yang menawarkan sun-community kepada Anda</li>         
                   <li>Anda silahkan membeli tiket pendaftaran kepada upline Anda senilai Rp. 100.000,-</li>
