--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -22,7 +22,7 @@
             </div>
             
             <h3>Bagaimana cara kerja sun-community.com?</h3>
-            <h5>Berikut adalah tahap-tahap cara kerja di sun-community.com :</h5>
+            <p>Berikut adalah tahap-tahap cara kerja di sun-community.com :</p>
             <div class="eleven column mobile-five">
                 <ul class="square">
                   <li>Anda harus mencari upline atau orang yang menawarkan sun-community kepada Anda</li>         
@@ -30,10 +30,22 @@
                   <li>Anda silahkan memberikan data-data yang dibutuhkan kepada upline Anda-</li>
                   <li>Setelah id Anda siap didaftarkan, maka id Anda ter-PH secara otomatis
                   <li>Penjodohan PH-GH akan dilakukan secara random 1-5 hari</li>
-                  <li>Setelah Anda mendapatkan pasangan transfer, silahkan lakukan proses transfer tersebut (Anda akan diberikan</li>
+                  <li>Setelah Anda mendapatkan pasangan transfer, silahkan lakukan proses transfer tersebut (Anda akan diberikan waktu 48 jam untuk melakukan proses transfer tersebut)</li>
+                  <li>Setelah Anda transfer dan dikonfirmasi, maka Anda harus menunggu selama 1 x 24 jam agar dapat melakukan GH</li>
+                  <li>Untuk melakukan GH, Anda harus membeli 1 tiket ke upline Anda. Tiket akan digunakan untuk rePH, dengan begitu sistem sun-community.com akan long live</li>
+                <li>Penjodohan akan dilakukan setiap pukul 22.00 WIB</li>
+                <li>Setelah GH Anda komplit, maka secara otomatis akan direPH oleh sistem</li>
                 </ul> 	
             </div>
             
+           <h3> Bagaimana perhitungan bonus di sun-community.com?</h3>
+            <p>Terdapat 2 bonus utama di sun-community.com, yaitu:</p>
+            <div class="eleven column mobile-five">
+                <ul class="square">
+                  <li>Bonus Pasif</li>    
+                  <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
+                </ul> 	
+            </div>
             </div>
         </div>
       </div>             
@@ -42,24 +54,6 @@
 
 
 
-
-
-
-
-1.	
-2.	
-3.	
-4.	
- waktu 48 jam untuk melakukan proses transfer tersebut)
-7.	Setelah Anda transfer dan dikonfirmasi, maka Anda harus menunggu selama 1 x 24 jam agar dapat melakukan GH.
-8.	Untuk melakukan GH, Anda harus membeli 1 tiket ke upline Anda. Tiket akan digunakan untuk rePH, dengan begitu sistem sun-community.com akan long live.
-9.	Penjodohan akan dilakukan setiap pukul 22.00 WIB
-10.	Setelah GH Anda komplit, maka secara otomatis akan direPH oleh sistem.
-Bagaimana perhitungan bonus di sun-community.com?
-Terdapat 2 bonus utama di sun-community.com, yaitu:
-1.	Bonus Pasif
-150% (termasuk modal)
-Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.
 2.	Bonus Aktif
 Bonus aktif terbagi atas 2, yaitu :
 a.	Bonus Sponsor : 10%
