--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -44,6 +44,12 @@
                 <ul class="square">
                   <li>Bonus Pasif</li>    
                   <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
+                  <li>Bonus Aktif</li>
+                    <p>Bonus aktif terbagi atas 2, yaitu :
+                    <li>Bonus Sponsor : 10%</li>
+                    <li>Bonus Manager : 10% (unlimited level) Syarat manager : mensponsori minimal 10 orang</li>
+                    <li>Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</li>
+                    </p>
                 </ul> 	
             </div>
             </div>
@@ -54,12 +60,6 @@
 
 
 
-2.	Bonus Aktif
-Bonus aktif terbagi atas 2, yaitu :
-a.	Bonus Sponsor : 10%
-b.	Bonus Manager : 10% (unlimited level)
-Syarat manager : mensponsori minimal 10 orang
-c.	Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!
 Terdapat 3 bonus kelipatan, yaitu:
 1.	Multiple4
 Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.
