--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -46,9 +46,9 @@
                   <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
                   <li>Bonus Aktif</li>
                     <p>Bonus aktif terbagi atas 2, yaitu :
-                    <li>Bonus Sponsor : 10%</li>
-                    <li>Bonus Manager : 10% (unlimited level) Syarat manager : mensponsori minimal 10 orang</li>
-                    <li>Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</li>
+                    <p>1. Bonus Sponsor : 10%</p>
+                    <p>2. Bonus Manager : 10% (unlimited level) Syarat manager : mensponsori minimal 10 orang</p>
+                    <p>3. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</p>
                     </p>
                 </ul> 	
             </div>
