--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -45,12 +45,42 @@
                   <li>Bonus Pasif</li>    
                   <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
                   <li>Bonus Aktif</li>
-                    <p>Bonus aktif terbagi atas 2, yaitu :
+                    <p>Bonus aktif terbagi atas 2, yaitu :<br>
                     1. Bonus Sponsor : 10%<br>
                     2. Bonus Manager : 10% (unlimited level) Syarat manager : mensponsori minimal 10 orang<br>
                     3. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
                     </p>
                 </ul> 	
+            </div>
+            <p>Terdapat 3 bonus kelipatan, yaitu:</p>
+            <div class="eleven column mobile-five">
+                <ul class="square">
+                    <li>Multiple4</li>
+                        <p>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
+                    <li>Multiple10</li> 
+                        <p>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
+                    <li>Multiple20</li>
+                        <p>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
+                
+                </ul>
+            </div>
+            
+            <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
+                <p>Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.</p>
+                
+            <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
+                <p>Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.</p>
+                
+            <h3>ATURAN-ATURAN LAINNYA</h3>
+            <div class="eleven column mobile-five">
+                <ul class="square">
+                    <li>Tiket Pendaftaran Rp. 100.000,- / id</li>
+                    <li>Tidak ada batasan nomor rekening, e-mail, maupun no hp.
+                    <li>Perintah transfer muncul dihari ke 1 – 5 secara random
+                    <li>1 id terblok, id lain akan ikut diblokir
+                    <li>Maksimal penarikan bonus manager setiap minggunya adalah Rp. 5.000.000	                                      <li>Tidak ada batasan penarikan bonus pasif, bonus sponsor, dan bonus kelipatan.
+	                <li>Segala keluhan dapat disampaikan kepada CRO kami yang sangat responsif.
+                </ul>
             </div>
             </div>
         </div>
@@ -59,22 +89,4 @@
     <!-- content section end here -->
 
 
-
-Terdapat 3 bonus kelipatan, yaitu:
-1.	Multiple4
-Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.
-2.	Multiple10
-Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.
-3.	Multiple20
-Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.
-Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?
-Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.
-ATURAN-ATURAN LAINNYA
-1.	Tiket Pendaftaran Rp. 100.000,- / id
-2.	Tidak ada batasan nomor rekening, e-mail, maupun no hp.
-3.	Perintah transfer muncul dihari ke 1 – 5 secara random
-4.	1 id terblok, id lain akan ikut diblokir
-5.	Maksimal penarikan bonus manager setiap minggunya adalah Rp. 5.000.000
-6.	Tidak ada batasan penarikan bonus pasif, bonus sponsor, dan bonus kelipatan.
-7.	Segala keluhan dapat disampaikan kepada CRO kami yang sangat responsif.
 
