--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -38,7 +38,7 @@
                 </ul> 	
             </div>
             
-           <h3> Bagaimana perhitungan bonus di sun-community.com?</h3>
+           <h3>Bagaimana perhitungan bonus di sun-community.com?</h3>
             <p>Terdapat 2 bonus utama di sun-community.com, yaitu:</p>
             <div class="eleven column mobile-five">
                 <ul class="square">
@@ -53,18 +53,12 @@
                 </ul> 	
             </div>
             <p>Terdapat 3 bonus kelipatan, yaitu:</p>
-            <div class="eleven column mobile-five">
-                <ul class="square">
-                    <li>Multiple4</li>
-                        <p>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
-                    <li>Multiple10</li> 
-                        <p>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
-                    <li>Multiple20</li>
-                        <p>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
-                
-                </ul>
-            </div>
-            
+                    <p>Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
+                    <p>Multiple10
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
+                    <p>Multiple20
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
+
             <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
                 <p>Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.</p>
                 
