--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -45,20 +45,21 @@
                   <li>Bonus Pasif</li>    
                   <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
                   <li>Bonus Aktif</li>
-                    <p>Bonus aktif terbagi atas 2, yaitu :<br>
-                    1. Bonus Sponsor : 10%<br>
-                    2. Bonus Manager : 10% (unlimited level) Syarat manager : mensponsori minimal 10 orang<br>
-                    3. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
-                    </p>
-                </ul> 	
-            </div>
-            <p>Terdapat 3 bonus kelipatan, yaitu:</p>
+                    <p>Bonus aktif terbagi atas 3, yaitu :<p>
+                    </p>A. Bonus Sponsor : 10%<br>
+                    <p>B. Bonus Manager : 10% (unlimited level)<br?
+                    	<p>Syarat manager : mensponsori minimal 10 orang</p>
+                    <p>Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
+                    	<p>Terdapat 3 bonus kelipatan, yaitu:</p>
                     <p>Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
                     <p>Multiple10
                         <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
                     <p>Multiple20
                         <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
-
+                    </p>
+                </ul> 	
+            </div>
+            
             <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
                 <p>Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.</p>
                 
