--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -12,7 +12,7 @@
     	<div class="row">
         	<div class="twelve column">
             	<h3>Apa itu sun-community.com?</h3>
-                <p>Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun.community.com akan disebut sebagai partisipan.</p>
+                <p>Sun-community.com merupakan sebuah wadah yang disediakan untuk saling berbagi.  Kami memberi nama ‘sun’ dikarenakan sistim ini menggunakan konsep matahari yang menguntungkan semua pihak. Setiap orang yang bergabung dengan sun-community.com akan disebut sebagai partisipan.</p>
             	<h5> Setiap partisipan akan memiliki 2 buah hak, yaitu :</h5>
             	<div class="eleven column mobile-five">
                 <ul class="square">
@@ -47,17 +47,16 @@
                   <li>Bonus Aktif</li>
                     <p>Bonus aktif terbagi atas 3, yaitu :<p>
                     </p>A. Bonus Sponsor : 10%<br>
-                    <p>B. Bonus Manager : 10% (unlimited level)<br?
-                    	<p>Syarat manager : mensponsori minimal 10 orang</p>
-                    <p>Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
-                    	<p>Terdapat 3 bonus kelipatan, yaitu:</p>
-                    <p>Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
-                    <p>Multiple10
+                    <p>B. Bonus Manager : 10% (unlimited level)<br>
+                    	Syarat manager : mensponsori minimal 10 orang</p>
+                    <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
+                    	Terdapat 3 bonus kelipatan, yaitu:</p>
+                    	<p style="text-indent: 5em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
+                    <p style="text-indent: 5em;">2. Multiple10
                         <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
-                    <p>Multiple20
+                    <p style="text-indent: 5em;">3. Multiple20
                         <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
                     </p>
-                </ul> 	
             </div>
             
             <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
