--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -46,16 +46,15 @@
                   <p>150% (termasuk modal) Bonus dapat di GH setelah 1 x 24 dari terkonfirmasinya PH.</p>
                   <li>Bonus Aktif</li>
                     <p>Bonus aktif terbagi atas 3, yaitu :<p>
-                    </p>A. Bonus Sponsor : 10%<br>
-                    <p>B. Bonus Manager : 10% (unlimited level)<br>
-                    	Syarat manager : mensponsori minimal 10 orang</p>
-                    <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!<br>
-                    	Terdapat 3 bonus kelipatan, yaitu:</p>
-                    	<p style="text-indent: 5em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p>
-                    <p style="text-indent: 5em;">2. Multiple10
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p>
-                    <p style="text-indent: 5em;">3. Multiple20
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
+                    <p>A. Bonus Sponsor : 10%</p>
+                    <p>B. Bonus Manager : 10% (unlimited level) *Syarat manager : mensponsori minimal 10 orang</p>
+                    <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</p>
+                    <span style="text-indent: 1em;">Terdapat 3 bonus kelipatan, yaitu:</span>
+                    	<span style="text-indent: 2em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</span>
+                    <span style="text-indent: 2em;">2. Multiple10
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</span>
+                    <span style="text-indent: 2em;">3. Multiple20
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</span>
                     </p>
             </div>
             
