--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -49,13 +49,14 @@
                     <p>A. Bonus Sponsor : 10%</p>
                     <p>B. Bonus Manager : 10% (unlimited level) *Syarat manager : mensponsori minimal 10 orang</p>
                     <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</p>
-                    <span style="text-indent: 1em;">Terdapat 3 bonus kelipatan, yaitu:</span>
-                    	<span style="text-indent: 2em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</span>
-                    <span style="text-indent: 2em;">2. Multiple10
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</span>
-                    <span style="text-indent: 2em;">3. Multiple20
+                    <p style="text-indent: 2em;">Terdapat 3 bonus kelipatan, yaitu:</p>
+                    	<span style="text-indent: 3em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</span><br>
+                    <span style="text-indent: 3em;">2. Multiple10
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</span><br>
+                    <span style="text-indent: 3em;">3. Multiple20
                         <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</span>
                     </p>
+                </ul>
             </div>
             
             <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
