--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -50,15 +50,15 @@
                     <p>B. Bonus Manager : 10% (unlimited level) *Syarat manager : mensponsori minimal 10 orang</p>
                     <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</p>
                     <p style="text-indent: 2em;">Terdapat 3 bonus kelipatan, yaitu:</p>
-                    	<span style="text-indent: 3em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</span><br>
-                    <span style="text-indent: 3em;">2. Multiple10
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</span><br>
-                    <span style="text-indent: 3em;">3. Multiple20
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</span>
-                    </p>
+                    	<p style="text-indent: 3em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p><br>
+                    <p style="text-indent: 3em;">2. Multiple10
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p><br>
+                    <p style="text-indent: 3em;">3. Multiple20
+                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
                 </ul>
             </div>
             
+           <div class="twelve column">
             <h3>Apa syarat untuk menjadi stockist? Dan Apa keuntungannya?</h3>
                 <p>Setiap partisipan yang membeli tiket sebanyak 50 tiket, maka secara otomatis akan dianggap menjadi stockist. Stockist akan mendapatkan GH gratis senilai Rp. 1.500.000,-. Jadi, PH perdana akan ditujukan ke para stockist, bukan diarahkan ke admin/owner. Kami hanya menerima stockist sebanyak 50 orang.</p>
                 
@@ -75,6 +75,7 @@
                     <li>Maksimal penarikan bonus manager setiap minggunya adalah Rp. 5.000.000	                                      <li>Tidak ada batasan penarikan bonus pasif, bonus sponsor, dan bonus kelipatan.
 	                <li>Segala keluhan dapat disampaikan kepada CRO kami yang sangat responsif.
                 </ul>
+            </div>
             </div>
             </div>
         </div>
