--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -50,11 +50,9 @@
                     <p>B. Bonus Manager : 10% (unlimited level) *Syarat manager : mensponsori minimal 10 orang</p>
                     <p>C. Bonus Kelipatan (Multiple Bonus) TEROBOSAN BARU !!!</p>
                     <p style="text-indent: 2em;">Terdapat 3 bonus kelipatan, yaitu:</p>
-                    	<p style="text-indent: 3em;">1. Multiple4<br>Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p><br>
-                    <p style="text-indent: 3em;">2. Multiple10
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p><br>
-                    <p style="text-indent: 3em;">3. Multiple20
-                        <br>Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
+                    	<p style="text-indent: 3em;">1. Multiple4 :Anda akan mendapatkan bonus tambahan Rp. 500.000,- setiap berhasil mensponsori kelipatan 4 orang.</p><br>
+                    <p style="text-indent: 3em;">2. Multiple10: Anda akan mendapatkan bonus tambahan Rp. 1.000.000,- setiap berhasil mensponsori kelipatan 10 orang.</p><br>
+                    <p style="text-indent: 3em;">3. Multiple20: Anda akan mendapatkan bonus tambahan Rp. 2.000.000,- setiap berhasil mensponsori kelipatan 20 orang.</p>
                 </ul>
             </div>
             
