--- a/views/a-home.ejs
+++ b/views/a-home.ejs
@@ -2,11 +2,10 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <div class = "container">
-	<form action="/user/login" method="POST" class="form-signin" style="margin-top:270px;">
+	<form action="/user/login" method="POST" class="form-signin" style="margin-top:250px;">
             <div class="col-sm-6 col-md-offset-3" style="padding-bottom:100px;">
                 <div class="thumbnail">
-                  <h6 class="form-signin-heading" style="text-align:center;">Masuk</h6>
-                  
+			<img src="/images/logo.jpg" alt="Logo" style="width:300px;height:100px">
                   <div class="caption">
                       <div class="input-group form-group">
                           <span class="input-group-addon" style="color:white; background-color:black; border:1px solid black;">
