--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,8 +119,8 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <div class="twelve column">
                     <!-- logo start here -->
                     <div id="logo">
-                        <a href="/user/phgh"><img src="/images/logo.jpg" alt="main-logo" class="retina"/></a>
-                    </div>           
+                        <a href="/user/phgh"><img src="/images/logo.jpg" alt="main-logo" class="retina" style="width:250px;height:50px"/></a>
+                    </div>
                     <!-- logo end here -->
                     
                     <div id="top-socials">
@@ -211,7 +211,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
             </div>
             
             <div class="three column">
-                <img src="/images/logo.jpg" alt="" class="footer-logo retina" />
+                <img src="/images/logo.jpg" alt="" class="footer-logo retina" style="width:230px;height:70px"/>
                 <p>Temporibus autem quibusdam officiis debitis aut rerum necessitatibus saepe</p>
                 <p>&copy; 2013 by Indonez. All Rights Reserved. </p>    
             </div>       
