Change logo layout #2

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,7 +119,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <div class="twelve column">
                     <!-- logo start here -->
                     <div id="logo">
-                        <a href="/user/phgh"><img src="/images/logo.jpg" alt="main-logo" class="retina" style="width:250px;height:50px"/></a>
+                        <a href="/user/phgh"><h1 style="color: #d4d7db; font-weight:bold;"></h1></a>
                     </div>
                     <!-- logo end here -->
                     
@@ -211,7 +211,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
             </div>
             
             <div class="three column">
-                <img src="/images/logo.jpg" alt="" class="footer-logo retina" style="width:230px;height:70px"/>
+                <a href="/user/phgh"><h1 style="color: #d4d7db; font-weight:bold;"></h1></a>
                 <p>Temporibus autem quibusdam officiis debitis aut rerum necessitatibus saepe</p>
                 <p>&copy; 2013 by Indonez. All Rights Reserved. </p>    
             </div>       
