--- a/views/user/phgh.ejs
+++ b/views/user/phgh.ejs
@@ -1,4 +1,16 @@
-<section class="content-wrapper">
+<section class="content-wrapper">       
+        <div class="row">
+            <div class="twelve column mobile-two">
+                <div class="note-folded red">
+                    <h4>Terima Kasih</h4>
+                    <p>Menu PH/GH akan berfungsi pada hari Jumat, tanggal 10 April 2015.</p>
+                </div>                        
+            </div>
+   </div>
+</section>
+
+
+/*<section class="content-wrapper">
         <div class="row" style="margin-left: 300px; width: 0%;">
             <div class="twelve column" >
                 <a href="/user/pleasehelp"><button type="submit" class="button large blue" id="buttonsend">PH</button></a>
@@ -208,3 +220,4 @@
         <% } %>
         </div>             
     </section>
+*/
