--- a/views/user/phgh.ejs
+++ b/views/user/phgh.ejs
@@ -10,7 +10,7 @@
 </section>
 
 
-/*<section class="content-wrapper">
+<!--<section class="content-wrapper">
         <div class="row" style="margin-left: 300px; width: 0%;">
             <div class="twelve column" >
                 <a href="/user/pleasehelp"><button type="submit" class="button large blue" id="buttonsend">PH</button></a>
@@ -219,5 +219,4 @@
         <% }) %>
         <% } %>
         </div>             
-    </section>
-*/
+    </section>-->
