--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -194,26 +194,8 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
 <% if (session.authenticated) { %>
 <footer>   
         <div class="row">
-            <div class="nine column">
-                <h6>Contact Information</h6>
-                <ul class="footer-address no-bullet">
-                    <li class="address">25 Silver Avenue. Jakarta, JKT, 12345. IND</li>
-                    <li class="phone">(621) 123 4567</li>
-                    <li class="email"><a href="mailto:mail@yourdomain.com">mail@yourdomain.com</a></li>
-                </ul>
-                
-                <ul class="footer-link no-bullet">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Legal Notice</a></li>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">FAQs</a></li>
-                </ul>       
-            </div>
-            
-            <div class="three column">
-                <a href="/user/phgh"><h1 style="color: #d4d7db; font-weight:bold;">SUN COMMUNITY</h1></a>
-                <p>Temporibus autem quibusdam officiis debitis aut rerum necessitatibus saepe</p>
-                <p>&copy; 2013 by Indonez. All Rights Reserved. </p>    
+            <div class="twelve column">
+                <p>&copy; 2015 by teamitsun. All Rights Reserved. </p>    
             </div>       
         </div>
     </footer>
