--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -145,7 +145,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <nav id="mainmenu">
                     <ul id="menu">
                         <% if(session.authenticated) { %>
-                        <li><a href=""javascript: void(0)"">Home<br><span class="desc-menu">PH/GH</span></a>
+                        <li><a href="#" onclick="message(); return false;">Home<br><span class="desc-menu">PH/GH</span></a>
                         </li>                                                
                         <li><a href="/user/team">Team<br><span class="desc-menu">List</span></a>
                         </li>
