--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,7 +119,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <div class="twelve column">
                     <!-- logo start here -->
                     <div id="logo">
-                        <a href="/user/phgh"><h1 style="color: #d4d7db; font-weight:bold;">SUN COMMUNITY</h1></a>
+                        <a href="/user/phgh" onClick="alert('Hello World!')"><h1 style="color: #d4d7db; font-weight:bold;">SUN COMMUNITY</h1></a>
                     </div>
                     <!-- logo end here -->
                     
@@ -145,7 +145,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <nav id="mainmenu">
                     <ul id="menu">
                         <% if(session.authenticated) { %>
-                        <li><a href="#" onclick="message(); return false;">Home<br><span class="desc-menu">PH/GH</span></a>
+                        <li><a href="/user/phgh" onClick="alert('Hello World!')">Home<br><span class="desc-menu">PH/GH</span></a>
                         </li>                                                
                         <li><a href="/user/team">Team<br><span class="desc-menu">List</span></a>
                         </li>
