--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -111,7 +111,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
 
   <body>
     <% if(session.authenticated) { %>
-    <header>
+    <header style="background:#fff;">
     
         <!-- top info start here -->
         <div id="top-info">
@@ -119,7 +119,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <div class="twelve column">
                     <!-- logo start here -->
                     <div id="logo">
-                        <a href="#" onClick="alert('Menu ini akan berfungsi Jumat, 10 April 2015. Terima Kasih')"><h1 style="color: #d4d7db; font-weight:bold;">SUN COMMUNITY</h1></a>
+                        <a href="/user/register"><h1 style="color: #000; font-weight:bold;">SUN COMMUNITY</h1></a>
                     </div>
                     <!-- logo end here -->
                     
@@ -192,7 +192,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
     <% } %>
     <%- body %>
 <% if (session.authenticated) { %>
-<footer>   
+<footer style="background:#fff;">   
         <div class="row">
             <div class="twelve column">
                 <p>&copy; 2015 by teamitsun. All Rights Reserved. </p>    
