--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -119,7 +119,7 @@ shadow:0                //0 = no Shadow, 1,2,3 = 3 Different Art of Shadows -  (
                 <div class="twelve column">
                     <!-- logo start here -->
                     <div id="logo">
-                        <a href="/user/register"><h1 style="color: #000; font-weight:bold;">SUN COMMUNITY</h1></a>
+                        <h1 style="color: #000; font-weight:bold;">SUN <span style="color: #FF9B00;">COMMUNITY</span></h1>
                     </div>
                     <!-- logo end here -->
                     
